--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bevy_bits = { path = "bevy_bits" }
+bevy = { version = "0.14.1", features = ["wav", "mp3"] }
+
+# Enable a small amount of optimization in the dev profile.
+[profile.dev]
+opt-level = 0
+
+# Enable a large amount of optimization in the dev profile for dependencies.
+[profile.dev.package."*"]
+opt-level = 3
+
+[profile.dev.package."bevy_bits"]
+opt-level = 0
