--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 bevy_bits = { path = "bevy_bits" }
 bevy = { version = "0.14.1", features = ["wav", "mp3"] }
+paste = "1.0.15"
+rand = "0.8.5"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
