--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bevy_bits"]
 	path = bevy_bits
 	url = https://github.com/void-scape/bevy_bits
+[submodule "bevy-tilemap-editor-pls"]
+	path = bevy-tilemap-editor-pls
+	url = https://github.com/InnocentusLime/bevy-tilemap-editor-pls
