Added plugin to manage ecs_editor_pls and resolved #2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,10 @@ version = "0.12.2"
 default-features = false
 features = ["simd"]
 
+[features]
+default = ["editor"]
+editor = []
+
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
 opt-level = 0
