--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ bevy_editor_pls = "0.10.0"
 bevy_ecs_ldtk = { version = "0.10.0", features = ["atlas"] }
 leafwing-input-manager = "0.15.1"
 bevy_asset_loader = "0.21.0"
+bevy_ecs_tilemap = "0.14.0"
 
 [dependencies.bevy]
 version = "0.14.1"
