--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,18 @@ version = "0.12.2"
 default-features = false
 features = ["simd"]
 
+[build-dependencies]
+bevy_ecs_ldtk = { version = "0.10.0" }
+serde_json = "1.0"
+serde = "1.0"
+walkdir = "2.5"
+convert_case = "0.6"
+syn = { version = "2.0", default-features = false, features = ["full"] }
+quote = { version = "1.0", default-features = false }
+prettyplease = { version = "0.2", default-features = false }
+proc-macro2 = { version = "1.0", default-features = false }
+
+
 [features]
 default = ["editor"]
 editor = []
