--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "bevy_sequence"]
 	path = bevy_sequence
 	url = https://github.com/corvusprudens/bevy_sequence
+[submodule "bevy_pretty_text"]
+	path = bevy_pretty_text
+	url = https://github.com/void-scape/bevy_pretty_text
