--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ bevy_enoki = "0.3.3"
 
 [dependencies.bevy]
 version = "0.15"
-features = ["dynamic_linking", "wav", "mp3", "jpeg"]
+features = ["dynamic_linking", "file_watcher", "wav", "mp3", "jpeg"]
 
 [build-dependencies]
 bevy_ldtk_scene = { path = "bevy_ldtk_scene" }
