Started integrating new audio

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bevy_pretty_text"]
 	path = bevy_pretty_text
 	url = https://github.com/void-scape/bevy_pretty_text
+[submodule "bevy_seedling"]
+	path = bevy_seedling
+	url = https://github.com/corvusprudens/bevy_seedling
